fix nodes status modal from clipping

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -222,12 +222,14 @@ textarea {
 }
 
 #div_iframe {
+  position: relative;
   width:100%;
   height:100%;
   z-index: -1;
 }
 
 #iframe_a {
+  position: fixed;
   display: block;
   border-width: 0px;
   width:100%;
